--- a/.github/workflows/dns-backup.yml
+++ b/.github/workflows/dns-backup.yml
@@ -1,7 +1,5 @@
 name: DNS Backup
-on:
-  schedule:
-    - cron: "0 17 7 * *"
+on: [push]
 jobs:
   dns-backup:
     runs-on: ubuntu-latest
@@ -12,11 +10,11 @@ jobs:
         run: docker pull lfaoro/flares
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%m-%Y')"
+        run: echo "::set-output name=date::$(date +'%b-%Y')"
       - name: Fetch DNS Records
-        run: docker run -e CF_API_TOKEN="$CF_API_TOKEN" lfaoro/flares idiomaticprogrammers.com > idiomaticprogrammers.txt
+        run: docker run -e CF_API_TOKEN="$CF_API_TOKEN" lfaoro/flares uditmittal.com > uditmittal.txt
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: idiomaticprogrammers.txt
+          files: uditmittal.txt
           tag_name: ${{ steps.date.outputs.date }}
