--- a/.github/workflows/dns-backup.yml
+++ b/.github/workflows/dns-backup.yml
@@ -2,6 +2,8 @@ name: DNS Backup
 on: 
   schedule:
     - cron: "0 17 7 * *"
+  workflow_dispatch:
+  
 jobs:
   dns-backup:
     runs-on: ubuntu-latest
