--- a/.github/workflows/dns-backup.yml
+++ b/.github/workflows/dns-backup.yml
@@ -3,7 +3,10 @@ on:
   schedule:
     - cron: "0 17 7 * *"
   workflow_dispatch:
-  
+
+permissions:
+  contents: write
+
 jobs:
   dns-backup:
     runs-on: ubuntu-latest
@@ -26,3 +29,16 @@ jobs:
         with:
           files: dns-records-uditmittal.com.txt
           tag_name: ${{ steps.date.outputs.date }}
+
+      - name: Update README with last run time
+        run: |
+          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M UTC")
+          sed -i "s/- 🔄 Last Run:.*/- 🔄 Last Run: $TIMESTAMP/" README.md
+      
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Action"
+          git add README.md
+          git commit -m "Update last run timestamp" || exit 0
+          git push
